deployment_geoserver/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kindlytoad
spec:
  serviceName: "kindlytoad"
  selector:
    matchLabels:
      app: kindlytoad
  replicas: 1
  template:
    metadata:
      labels:
        app: kindlytoad
    spec:
      volumes:
        - name: volumepartage
          persistentVolumeClaim:
            claimName: espace-kindlytoad
      containers:
        - name: geoserver
          image: kartoza/geoserver:2.21.0 # 2.19.0
          imagePullPolicy: Always
          volumeMounts: # This section specifies where the volume should be mounted inside the container
            - name: volumepartage
              mountPath: /opt/geoserver_data/ # Replace this with the actual moun #/opt/geoserver_data
