deployment_geoserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kindlytoad #nom du service unique (trio)
spec:
  selector:
    app: kindlytoad # c'est bien le label mis au pod qui est recherché local à un namespace
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080 # port standard
